--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "jerusalem-detective-agency",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://libbymcgeough.github.io/",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gradient": "^1.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
